# ha-logi-host

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  pyproject.toml  repository.yaml  run.sh
.github/workflows/: auto-bump.yml
ha_logi_host/: Dockerfile  build.yaml  config.yaml
ha_logi_host/logi_host/: __init__.py  constants.py  main.py  mqtt.py  protocol.py  transport.py
ha_logi_host/rootfs/etc/services.d/ha_logi_host/: finish  run
ha_logi_host/tests/: test_main.py  test_mqtt.py  test_protocol.py
ha_logi_host/translations/: en.yaml
logi_host/: __main__.py  protocol.py  transport.py
tests/: conftest.py  test_constants.py  test_protocol.py
